# mqt-qecc

src/: CMakeLists.txt  DecoderComparison.cpp  LightsOut.cpp  MaxSATDecoder.cpp  UFDecoder.cpp  Utils.cpp  union_find.cpp
src/ldpc/: gf2sparse_linalg.cpp  lsd.cpp  lsd_cluster.cpp  osd.cpp  sort.cpp  util.cpp
test/: CMakeLists.txt  TestBPDecoder.cpp  TestLsd.cpp  TestOsdDecoder.cpp  test_decoder_comparison.cpp  test_maxsat.cpp  test_ufdmaxsat.cpp
test/decoder_results/1021_toric_bb90/maxSatDecoder/: results_[[32,2,4]].json  results_[[90,8,10]].json
test/decoder_results/1021_toric_bb90/ufDecoder/: results_[[90,8,10]].json
test/decoder_results/1021_toric_bb90/ufdMaxSatDecoder/: results_[[32,2,4]].json  results_[[8,2,2]].json  results_[[90,8,10]].json
test/decoder_results/1022_bb_7290144/MaxSAT/: results_[[144,12,12]].json
test/decoder_results/1022_bb_7290144/UF/: results_[[144,12,12]].json  results_[[90,8,10]].json
test/decoder_results/1022_bb_7290144/UF-matrix/: results_[[72,12,6]].json
test/decoder_results/1022_bb_7290144/UF-maxSAT/: results_[[144,12,12]].json  results_[[72,12,6]].json
test/decoder_results/1022_bb_90144/UF/: results_[[90,8,10]].json
test/decoder_results/1022_bb_90144/UF-matrix/: results_[[144,12,12]].json  results_[[90,8,10]].json
test/decoder_results/1022_bb_90144/UF-maxSAT/: results_[[144,12,12]].json  results_[[90,8,10]].json
test/decoder_results/1022_toric_X/UF-matrix/: results_[[18,2,3]].json  results_[[8,2,2]].json
test/decoder_results/1022_toric_X/UF-maxSAT/: results_[[18,2,3]].json  results_[[8,2,2]].json
test/decoder_results/1022_toric_even/UF/: results_[[32,2,4]].json  results_[[8,2,2]].json
test/decoder_results/1022_toric_even/UF-matrix/: results_[[32,2,4]].json
test/decoder_results/1022_toric_even/UF-maxSAT/: results_[[32,2,4]].json  results_[[8,2,2]].json
test/decoder_results/1022_toric_even/UF-peel/: results_[[32,2,4]].json
test/decoder_results/1022_toric_odd/MaxSAT/: results_[[98,2,7]].json
test/decoder_results/1022_toric_odd/UF/: results_[[18,2,3]].json  results_[[50,2,5]].json
test/decoder_results/1022_toric_odd/UF-maxSAT/: results_[[18,2,3]].json  results_[[50,2,5]].json
test/decoder_results/1022_toric_odd_2/UF/: results_[[50,2,5]].json
test/decoder_results/1022_toric_odd_2/UF-matrix/: results_[[18,2,3]].json  results_[[50,2,5]].json
test/decoder_results/1023_bb_7290144/UF-matrix/: results_[[144,12,12]].json  results_[[72,12,6]].json
test/decoder_results/1023_bb_7290144/UF-maxSAT/: results_[[144,12,12]].json
test/decoder_results/1023_bb_7290144_2/UF/: results_[[90,8,10]].json
test/decoder_results/1023_bb_7290144_2/UF-maxSAT/: results_[[144,12,12]].json  results_[[72,12,6]].json
test/decoder_results/1023_bb_7290144_3/MaxSAT/: results_[[90,8,10]].json
test/decoder_results/1023_bb_7290144_3/UF/: results_[[144,12,12]].json  results_[[90,8,10]].json
test/decoder_results/1023_bb_7290144_3/UF-matrix/: results_[[90,8,10]].json
test/decoder_results/1023_bb_7290144_3/UF-maxSAT/: results_[[72,12,6]].json
test/decoder_results/1023_toric_odd/MaxSAT/: results_[[50,2,5]].json
test/decoder_results/1023_toric_odd/OSD/: results_[[18,2,3]].json  results_[[98,2,7]].json
test/decoder_results/1023_toric_odd/UF/: results_[[18,2,3]].json
test/decoder_results/1023_toric_odd/UF-matrix/: results_[[18,2,3]].json
test/decoder_results/1023_toric_odd/UF-maxSAT/: results_[[50,2,5]].json
test/decoder_results/1027_bb_no_zeros/BP/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_bb_no_zeros/LSD/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_bb_no_zeros/MaxSAT/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_bb_no_zeros/OSD/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_bb_no_zeros/UF/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_bb_no_zeros/UF-matrix/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_bb_no_zeros/UF-maxSAT/: results_[[144,12,12]].json  results_[[72,12,6]].json  results_[[90,8,10]].json
test/decoder_results/1027_toric_odd/BP/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd/LSD/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd/MaxSAT/: results_[[162,2,9]].json
test/decoder_results/1027_toric_odd/OSD/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd/UF/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd/UF-matrix/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd/UF-maxSAT/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd/UF-peel/: results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd_big_erbs/LSD/: results_[[162,2,9]].json  results_[[50,2,5]].json  results_[[98,2,7]].json
test/decoder_results/1027_toric_odd_big_erbs/UF-matrix/: results_[[162,2,9]].json  results_[[50,2,5]].json
test/decoder_results/1028_bb/BP/: results_[[72,12,6]].json  (+2 more)
test/decoder_results/MaxSAT/: results_[[72,12,6]].json
test/decoder_results/UF/: results_[[72,12,6]].json
test/decoder_results/UF-matrix/: results_[[72,12,6]].json
test/decoder_results/UF-maxSAT/: results_[[90,8,10]].json
test/decoder_results/ufDecoder/: results_[[18,2,3]].json  results_[[32,2,4]].json  results_[[8,2,2]].json
test/decoder_results/ufdMatrixDecoder/: results_[[18,2,3]].json  results_[[8,2,2]].json
test/decoder_results/ufdMaxSatDecoder/: results_[[18,2,3]].json
test/resources/codes/: bb_(,)_[[288,12,18]]_hx.txt  bb_(,)_[[72,12,6]]_hz.txt  bb_(,)_[[90,8,10]]_hz.txt
(+255 files in other folders)
